--- a/product.html
+++ b/product.html
@@ -1,4 +1,26 @@
- <?php include("header.php"); ?>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/mobile.css" />
+<link rel="stylesheet" type="text/css" href="slick/slick.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css" media="screen" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="slick/slick.min.js"></script>
+<script src="slick/slick.js" type="text/javascript"></script>
+<script src="js/jquery.js" type="text/javascript"></script>
+
+<!-- header,footer読み込み -->
+<script type="text/javascript">
+$(function() {
+       $("#header").load("header.html");
+       $("#footer").load("footer.html");
+});
+</script>
+   <div id="header"></div>
    <div id="container">
    	<img src="./img/product_main.jpg" width="100%">
    	<div class="bg_white pb50">
@@ -69,6 +91,6 @@
      </div>		
    </div>
   
-  <?php include("footer.php"); ?>  
+  <div id="footer"></div>
 </body>
 </html>
