--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 		 <article class="footer_inner">
 		 	<section>
 		 	 <ul class="logo_f">
-		 	 	<li><a href="/cuppa/"><img src="/cuppa/img/cuppalogo_f.png" width="220px"></a></li>
+		 	 	<li><a href="/cuppa/"><img src="img/cuppalogo_f.png" width="220px"></a></li>
 		 	 </ul>
 		 	</section>
 		 	<section>
