--- a/header.html
+++ b/header.html
@@ -39,19 +39,28 @@
             <img src="img/online_top_off.png"> 
           </p>
     </div>
-    <header class="for_mobile">  
-    <p id="navToggle">
-     <div>
-      <span></span> <span></span> <span></span>
-     </div>
-    </p><!--#navToggle END-->
-    <nav>
-      <ul>
-        <li class="menu"><a href="/_static/cuppa/">HOME<br><span>ホーム</span></a></li>
-  		<li class="menu"><a href="/_static/cuppa/about.php">About us<br><span>Cuppaについて</span></a></li>
-  		<li class="menu"><a href="/_static/cuppa/product.php">Product<br><span>商品紹介</span></a></li> 
-  		<li class="menu"><a href="/_static/cuppa/event.php">Event<br><span>イベント情報</span></a></li>
-  		<li class="menu"><a href="/_static/cuppa/access.php/">Access<br><span>アクセス</span></a></li> 
-       </ul>
-    </nav>     
-   </header>
+    
+    <header id="top-head">
+    <div class="inner">
+        <div id="mobile-head">
+            <h1 class="logo"><img src="img/cuppalogo_h.png"></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="global-nav">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PRODUCT</a></li>
+                <li><a href="#">WORKS</a></li>
+                <li><a href="#">COMPANY</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
