--- a/header.html
+++ b/header.html
@@ -54,11 +54,11 @@
         </div>
         <nav id="global-nav">
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PRODUCT</a></li>
-                <li><a href="#">WORKS</a></li>
-                <li><a href="#">COMPANY</a></li>
-                <li><a href="#">CONTACT</a></li>
+            <li class="menu"><a href="/_static/cuppa/index.html">HOME</a></li>
+      		<li class="menu"><a href="/_static/cuppa/about.html">About us</a></li>
+      		<li class="menu"><a href="/_static/cuppa/product.html">Product</a></li> 
+      		<li class="menu"><a href="/_static/cuppa/event.html">Event</li>
+      		<li class="menu"><a href="/_static/cuppa/access.html">Access</li> 
             </ul>
         </nav>
     </div>
