--- a/header.html
+++ b/header.html
@@ -16,11 +16,11 @@
      </div> <!-- header_h -->
      <div class="header_b">    
       	<ul class="clear navi">   	               	
-      		<li class="menu"><a href="/_static/cuppa/index.html">HOME<br><span>ホーム</span></a></li>
-      		<li class="menu"><a href="/_static/cuppa/about.html">About us<br><span>Cuppaについて</span></a></li>
-      		<li class="menu"><a href="/_static/cuppa/product.html">Product<br><span>商品紹介</span></a></li> 
-      		<li class="menu"><a href="/_static/cuppa/event.html">Event<br><span>イベント情報</span></a></li>
-      		<li class="menu"><a href="/_static/cuppa/access.html">Access<br><span>アクセス</span></a></li> 
+      		<li class="menu"><a href="index.html">HOME<br><span>ホーム</span></a></li>
+      		<li class="menu"><a href="about.html">About us<br><span>Cuppaについて</span></a></li>
+      		<li class="menu"><a href="product.html">Product<br><span>商品紹介</span></a></li> 
+      		<li class="menu"><a href="event.html">Event<br><span>イベント情報</span></a></li>
+      		<li class="menu"><a href="access.html">Access<br><span>アクセス</span></a></li> 
      	</ul>  
      	<ul class="online">    
      	  <li>
@@ -54,11 +54,11 @@
         </div>
         <nav id="global-nav">
             <ul>
-            <li class="menu"><a href="/_static/cuppa/index.html">HOME</a></li>
-      		<li class="menu"><a href="/_static/cuppa/about.html">About us</a></li>
-      		<li class="menu"><a href="/_static/cuppa/product.html">Product</a></li> 
-      		<li class="menu"><a href="/_static/cuppa/event.html">Event</li>
-      		<li class="menu"><a href="/_static/cuppa/access.html">Access</li> 
+            <li class="menu"><a href="index.html">HOME</a></li>
+      		<li class="menu"><a href="about.html">About us</a></li>
+      		<li class="menu"><a href="product.html">Product</a></li> 
+      		<li class="menu"><a href="event.html">Event</li>
+      		<li class="menu"><a href="access.html">Access</li> 
             </ul>
         </nav>
     </div>
