--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=9" />
 <meta name="viewport" content="width=device-width">
+<link rel="stylesheet" type="text/css" href="css/slick.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/mobile.css" />
-<link rel="stylesheet" type="text/css" href="slick/slick.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="slick/slick-theme.css" media="screen" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="slick/slick.min.js"></script>
-<script src="slick/slick.js" type="text/javascript"></script>
-<script src="js/jquery.js" type="text/javascript"></script>
 
 <!-- header,footer読み込み -->
 <script type="text/javascript">
@@ -50,18 +47,20 @@ $(function() {
              </article>
              <article class="topic clear">     
                  <h2>Pickup contents</h2>
-                 <ul class="slider">
+                 <ul class="slick01 slick-slider">
                      <li><img src="img/top_topic_01.jpg"><p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p></li>
                      <li><img src="img/top_topic_02.jpg"></li>
                      <li><img src="img/top_topic_03.jpg"></li>
                      <li><img src="img/top_topic_04.jpg"></li>
                      <li><img src="img/top_topic_05.jpg"></li>
                      <li><img src="img/top_topic_06.jpg"></li>
-                 </ul>   
+                 </ul>  
              </article>
         </div> <!-- contents -->
     </div> <!-- container -->
    <div id="footer"></div>
   </div> <!-- #main -->
+  <script src="js/slick.min.js"></script>
+  <script src="js/jquery.js" type="text/javascript"></script>
  </body>
 </html>
